fix: overflow in code snippets

--- a/sass/static/css/blog-page.scss
+++ b/sass/static/css/blog-page.scss
@@ -12,4 +12,5 @@ body {
 
 pre {
   padding: 1em;
+  overflow-x: scroll;
 }
