--- a/sass/static/css/style.scss
+++ b/sass/static/css/style.scss
@@ -1,4 +1,5 @@
 body {
+  font-size: 20px;
   font-family: 'Work Sans', sans-serif;
   color: #111;
 }
